# ai-brain-core

./: .env.example  .gitignore  HEARTBEAT.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: brain_socket_tts_client.py  cli_chat.py  discord_import.py  heartbeat_loop.py  tool_example.py  twitch_import.py  voice_websocket_client.py  web_audio_playlist.js  websocket_client.py
scripts/: run-server.ps1  run-server.sh  setup.ps1  setup.sh
src/aibrain/: __init__.py  autonomy.py  cli.py  config.py  core.py  embeddings.py  env.py  gateway.py  inputs.py  memory.py  playback.py  policy.py  server.py  stt.py  thread_store.py  tools.py  tts.py  types.py
src/aibrain/webchat/: app.js  index.html  mic-worklet.js  styles.css
tests/: test_autonomy.py  test_brain.py  test_cli.py  test_config.py  test_embeddings.py  test_gateway.py  test_memory.py  test_playback.py  test_policy.py  test_stt.py  test_tools.py  test_tts.py  test_webchat.py
